# mpei_events2g_calendar

./: .gitignore  parser.py  pyproject.toml
